added prediction page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -11,3 +11,10 @@ label.home.chart.x_axis=Дати
 label.home.chart.y_axis=Кількість машин
 label.home.chart.summary_label=Загальна кількість машин на ППр
 label.home.chart.before_border_label=Кількість машин перед ППр
+
+
+label.prediction.chart.title=Прозноз
+label.prediction.chart.x_axis=Дати
+label.prediction.chart.y_axis=Кількість машин
+label.prediction.chart.statistic_label=Реальні дані
+label.prediction.chart.prediction_label=Прогнозовані дані
